<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/view_main_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/colorBackground"
        tools:context=".ui.activity.LoginActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_20"
                android:layout_marginTop="@dimen/padding_20"
                android:background="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_back" />
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_20"
                android:layout_marginEnd="@dimen/padding_20"
                android:background="@null"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_close" />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="500dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/padding_30"
                        android:layout_marginEnd="@dimen/padding_30"
                        android:orientation="vertical">
                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_my_sabay_app_name"
                            android:layout_marginTop="@dimen/padding_30"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/padding_35"
                            android:text="@string/verify_mysabay"
                            android:textAllCaps="true"
                            android:textAppearance="@style/BaseAppearanceTitle.MyAppearanceTitle"
                            android:textStyle="bold" />
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/existing_mysabay_account_desc"
                                android:textColor="@color/secondary"
                                android:paddingBottom="@dimen/padding_5"
                                android:textSize="@dimen/font_size_title"
                                />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/enter_your_password"
                                android:layout_marginTop="@dimen/padding_10"
                                android:textColor="@color/secondary"
                                android:paddingBottom="@dimen/padding_5"
                                android:textSize="@dimen/font_size_title"
                                />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/username"
                                android:textColor="@color/colorYellow"
                                android:paddingBottom="@dimen/padding_5"
                                android:layout_marginTop="@dimen/padding_15"
                                android:textSize="@dimen/font_size_title"
                                />
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="true"
                                android:fontFamily="@font/font_battambang_regular"
                                android:padding="@dimen/padding_8"
                                android:inputType="text"
                                android:singleLine="true"
                                android:textColor="@color/secondary"
                                android:background="@drawable/spinner_bg"
                                android:textCursorDrawable="@null"
                                android:enabled="false"
                                app:hintTextAppearance="@style/MyAppearanceBody1.Primary" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/password"
                                android:textColor="@color/colorYellow"
                                android:paddingBottom="@dimen/padding_5"
                                android:layout_marginTop="@dimen/padding_20"
                                android:textSize="@dimen/font_size_title"
                                />
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/font_battambang_regular"
                                android:padding="@dimen/padding_8"
                                android:inputType="textPassword"
                                android:imeOptions = "flagNoFullscreen"
                                android:singleLine="true"
                                android:textColor="@color/secondary"
                                android:background="@drawable/spinner_bg"
                                android:textCursorDrawable="@null"
                                app:hintTextAppearance="@style/MyAppearanceBody1.Primary" />

                            <androidx.appcompat.widget.LinearLayoutCompat
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center|bottom"
                                android:layout_alignParentBottom="true"
                                android:paddingBottom="@dimen/padding_20"
                                android:layout_marginTop="@dimen/padding_20"
                                android:orientation="vertical">
                                <androidx.appcompat.widget.AppCompatButton
                                    android:id="@+id/btn_confirm_mysabay"
                                    style="@style/ButtonPrimary"
                                    android:layout_width="250dp"
                                    android:layout_height="40dp"
                                    android:layout_gravity="center"
                                    android:layout_marginBottom="@dimen/padding_10"
                                    android:fontFamily="@font/font_battambang_regular"
                                    android:gravity="center"
                                    android:paddingStart="20dp"
                                    android:paddingEnd="20dp"
                                    android:stateListAnimator="@null"
                                    android:text="@string/confirm_mysabay"
                                    android:textAppearance="@style/MyAppearanceBody1" />

                                <View
                                    android:id="@+id/divider2"
                                    android:layout_width="200dp"
                                    android:layout_height="1dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginBottom="@dimen/padding_10"
                                    android:background="?android:attr/listDivider"
                                    android:backgroundTint="@color/colorYellow" />

                                <androidx.appcompat.widget.AppCompatButton
                                    android:id="@+id/btn_create_mysabay"
                                    style="@style/ButtonPrimary"
                                    android:layout_width="250dp"
                                    android:layout_height="40dp"
                                    android:layout_gravity="center"
                                    android:fontFamily="@font/font_battambang_regular"
                                    android:gravity="center"
                                    android:stateListAnimator="@null"
                                    android:text="@string/create_new_account"
                                    android:textAppearance="@style/MyAppearanceBody1" />
                            </androidx.appcompat.widget.LinearLayoutCompat>

                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <include
                android:id="@+id/view_empty"
                layout="@layout/view_empty"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="visible"
                android:layout_height="match_parent"
                android:layout_width="match_parent" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>