<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/view_main_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/colorBackground"
        tools:context=".ui.activity.LoginActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_20"
                android:background="@null"
                android:layout_marginTop="@dimen/padding_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_back" />
            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_20"
                android:layout_marginEnd="@dimen/padding_20"
                android:background="@null"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_close" />
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/view_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="@dimen/padding_30"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="@dimen/padding_30"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_my_sabay_app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/padding_30"
                        android:text="@string/login_with_my_sabay"
                        android:textAllCaps="true"
                        android:textAppearance="@style/BaseAppearanceTitle.MyAppearanceTitle"
                        android:textStyle="bold" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="400dp"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/padding_5"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/username"
                        android:textColor="@color/colorYellow"
                        android:textSize="@dimen/font_size_title" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_username"
                        android:layout_width="400dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner_bg"
                        android:layout_gravity="center_horizontal"
                        android:focusable="true"
                        android:fontFamily="@font/font_battambang_regular"
                        android:inputType="text"
                        android:padding="@dimen/padding_8"
                        android:singleLine="true"
                        android:imeOptions = "flagNoFullscreen"
                        android:textColor="@color/secondary"
                        android:textCursorDrawable="@null"
                        app:hintTextAppearance="@style/MyAppearanceBody1.Primary" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="400dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_20"
                        android:paddingBottom="@dimen/padding_5"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/password"
                        android:textColor="@color/colorYellow"
                        android:textSize="@dimen/font_size_title" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_password"
                        android:layout_width="400dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner_bg"
                        android:fontFamily="@font/font_battambang_regular"
                        android:layout_gravity="center_horizontal"
                        android:inputType="textPassword"
                        android:padding="@dimen/padding_8"
                        android:singleLine="true"
                        android:imeOptions = "flagNoFullscreen"
                        android:textColor="@color/secondary"
                        android:textCursorDrawable="@null"
                        app:hintTextAppearance="@style/MyAppearanceBody1.Primary" />

                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/padding_20"
                        android:layout_marginTop="@dimen/padding_20"
                        android:layout_marginEnd="@dimen/padding_20"
                        android:layout_marginBottom="@dimen/padding_30"
                        android:gravity="bottom|center"
                        android:orientation="vertical">
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/tv_register_account"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:text="@string/i_want_to_regiser_for_a_mysabay_account"
                            android:textColor="@color/colorYellow"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/btn_login"
                            style="@style/ButtonPrimary"
                            android:layout_width="250dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="@dimen/padding_15"
                            android:layout_marginBottom="@dimen/padding_10"
                            android:fontFamily="@font/font_battambang_regular"
                            android:gravity="center"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:stateListAnimator="@null"
                            android:text="@string/login"
                            android:textAppearance="@style/MyAppearanceBody1" />
                    </android.support.v7.widget.LinearLayoutCompat>
                </android.support.v7.widget.LinearLayoutCompat>
            </android.support.v7.widget.LinearLayoutCompat>
            <include
                android:id="@+id/view_empty"
                layout="@layout/view_empty"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="visible"
                android:layout_height="match_parent"
                android:layout_width="match_parent" />

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>