<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <RelativeLayout
        android:id="@+id/view_main_verified"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/padding_20"
            android:layout_marginTop="@dimen/padding_20"
            android:background="@null"
            android:padding="@dimen/padding_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_back" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp"
            android:paddingLeft="@dimen/padding_40"
            android:paddingRight="@dimen/padding_40"
            android:layout_centerHorizontal="true">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/confirm_otp"
                android:textAllCaps="true"
                android:textAppearance="@style/BaseAppearanceTitle.MyAppearanceTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:textAllCaps="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_show_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding_20"
                android:gravity="center"
                android:text="@string/enter_the_otp_that_you_have_received_via_text_message"
                android:textColor="@color/colorYellow"
                android:textSize="@dimen/font_size_body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

            <!--
        width is 6*48 + 4*5 = 308
        6 characters
        48dp width for each character (circle is the same as rect) so same width and height
        4dp space between each character
        5 spaces (spaces are usually characters - 1.
        -->
            <com.alimuzaffar.lib.pin.PinEntryEditText
                android:id="@+id/edt_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:background="@null"
                android:cursorVisible="false"
                android:digits="1234567890"
                android:inputType="number"
                android:maxLength="6"
                android:textColor="@color/secondary"
                android:textIsSelectable="false"
                android:textSize="24dp"
                android:imeOptions = "flagNoFullscreen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_show_otp"
                app:pinAnimationType="fromBottom"
                app:pinBackgroundDrawable="@drawable/bg_pin"
                app:pinBackgroundIsSquare="true"
                app:pinCharacterSpacing="@dimen/padding_20"
                app:pinTextBottomPadding="12dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="timer"
                android:textSize="12sp"
                android:textColor="@color/secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_verify_code" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="@dimen/padding_20"
                android:text="@string/resend_otp"
                android:textColor="@color/secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_timer" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <include
            android:id="@+id/view_empty"
            layout="@layout/view_empty"
            android:visibility="visible" />
    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
